Actually implement async fetching in RpcPolicyFinder